# optimized-ml-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SYSTEMDESIGN.md  context.hpp  execution_context.cpp  ir.hpp  main.cpp  onnx_to_ir.hpp  tensor.cpp  tensor.hpp
include/: execution_context.hpp  ir.hpp  onnx_to_ir.hpp  operator.hpp  operator_registry.hpp  tensor.hpp
include/operations/: add.hpp  concat.hpp  conv.hpp  dropout.hpp  globalaveragepool.hpp  matmul.hpp  maxpool.hpp  relu.hpp  sigmoid.hpp  softmax.hpp
src/: CMakeLists.txt  ir.cpp  main.cpp  operator_registry.cpp  tensor.cpp
src/operations/: CMakeLists.txt  add.cpp  concat.cpp  conv.cpp  dropout.cpp  globalaveragepool.cpp  matmul.cpp  maxpool.cpp  relu.cpp  sigmoid.cpp  softmax.cpp
